# cmake-template

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  opt.cpp
